--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "memory-game",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tchao770.github.io/Memory-Game/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
@@ -35,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
